2002-07-29  Andrew Cagney  <ac131313@redhat.com>


	* mi-cmd-var.c: Include "gdb_string.h".
	* mi-cmd-disas.c: Ditto.

2002-06-17  Keith Seitz  <keiths@redhat.com>

	* gdbmi.texinfo: Update command examples with real MI behavior.

2002-05-20  Keith Seitz  <keiths@redhat.com>

	* mi-main.c (captured_mi_execute_command): Add uiout parameter.
	"data" is now a structure which is used to pass data to/from this
	function to mi_execute_command.
	Modify function to comply with requirements from catch_exceptions.
	Store real return result and command's return result in data.
	(mi_execute_command): Use catch_exceptions.
	Use enum to handle actions to be performed instead of overloading
	catch_errors return result and the mi return result.

2002-04-14  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c (mi_cmd_exec_return): 

2002-04-09  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c (register_changed_p): Use frame_register_read instead
	of read_relative_register_raw_bytes.
	(get_register): Delete out-of-date comment.

2002-04-07  Elena Zannoni  <ezannoni@redhat.com>

        * mi-cmd-disas.c: Run through indent.

2002-04-07  Elena Zannoni  <ezannoni@redhat.com>

        * mi-cmd-disas.c (dump_insns): New function.
        (do_mixed_source_and_assembly): New function.
        (do_assembly_only): New function.
        (do_disassembly): New function.
        (mi_cmd_disassemble): Rewrite using smaller, more modular
        functions.

2002-04-05  Jim Blandy  <jimb@redhat.com>

	* mi-cmd-stack.c (list_args_or_locals): Pass new arg to
	get_frame_block.  (See entry in gdb/ChangeLog.)

2002-04-05  Elena Zannoni  <ezannoni@redhat.com>

	* mi-cmd-disas.c (mi_cmd_disassemble): Use TARGET_PRINT_INSN
	instead of tm_print_insn.
	Update copyright year.

2002-04-04  Daniel Jacobowitz  <drow@mvista.com>

	* mi-cmd-disas.c (mi_cmd_disassemble): Skip end-of-function
	markers in the line table.

2002-03-15  Andrew Cagney  <ac131313@redhat.com>

	* mi-main.c (XMALLOC): Delete macro.